# ficcd-ppgcc-2025

./: README.md  pyproject.toml  requirements.txt
atividade02/: FICCD_Atividade02_Helder.ipynb  pso.py
atividade02/datasets/: updated_pollution_dataset.csv
atividade03/: FICCD_Atividade03_Helder.ipynb
atividade04/: FICCD_Atividade04_Helder.ipynb
